--- a/main-app/public/index.html
+++ b/main-app/public/index.html
@@ -7,8 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
-    />
+      content="Website web site"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
@@ -18,6 +17,14 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-
   </body>
+
+  <script>
+
+    if("serviceWorker" in navigator){
+      window.addEventListener("load",() => {
+        navigator.serviceWorker.register("./serviceWorker.js");
+      });
+    }
+  </script>
 </html>
