--- a/main-app/public/index.html
+++ b/main-app/public/index.html
@@ -23,7 +23,7 @@
 
     if("serviceWorker" in navigator){
       window.addEventListener("load",() => {
-        navigator.serviceWorker.register("./serviceWorker.js");
+        navigator.serviceWorker.register("/serviceWorker.js");
       });
     }
   </script>
